Fixing spacing in search organizations

--- a/src/app/organizations/organizations/organizations.component.scss
+++ b/src/app/organizations/organizations/organizations.component.scss
@@ -68,3 +68,7 @@ form {
 .mat-form-field-appearance-outline .mat-form-field-outline {
   border: black 2px solid;
 }
+
+.alignment {
+  transform: translateY(-3px);
+}
